--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,6 @@
 config: 
   info:  master branch,springcloud-config/config-dev.yml version=1
+  
+spring:
+  application:
+    name: springcloud-config-service
