--- a/config-prod.yml
+++ b/config-prod.yml
@@ -1,3 +1,4 @@
+#生成环境
 config: 
   info:  master branch,springcloud-config/config-prod.yml version=1     #表示为 master分支下==>>springcloud-config仓库==>>config-prod.yml文件
   
